hw08/y.output
Grammar

    0 $accept: lines $end

    1 lines: lines stmts '\n'
    2      | lines error '\n'
    3      | /* empty */

    4 stmts: expr
    5      | ident '=' expr

    6 expr: expr '+' expr
    7     | expr '-' expr
    8     | expr '*' expr
    9     | expr '/' expr
   10     | '(' expr ')'
   11     | expr '|' expr
   12     | expr '^' expr
   13     | expr '&' expr
   14     | expr '%' expr
   15     | '~' expr
   16     | number
   17     | ident

   18 number: CONSTANT

   19 ident: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2
'%' (37) 14
'&' (38) 13
'(' (40) 10
')' (41) 10
'*' (42) 8
'+' (43) 6
'-' (45) 7
'/' (47) 9
'=' (61) 5
'^' (94) 12
'|' (124) 11
'~' (126) 15
error (256) 2
CONSTANT (258) 18
IDENTIFIER (259) 19
UMINUS (260)


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
lines (20)
    on left: 1 2 3, on right: 0 1 2
stmts (21)
    on left: 4 5, on right: 1
expr (22)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17, on right: 4 5 6 7 8 9
    10 11 12 13 14 15
number (23)
    on left: 18, on right: 16
ident (24)
    on left: 19, on right: 5 17


state 0

    0 $accept: . lines $end

    $default  reduce using rule 3 (lines)

    lines  go to state 1


state 1

    0 $accept: lines . $end
    1 lines: lines . stmts '\n'
    2      | lines . error '\n'

    $end        shift, and go to state 2
    error       shift, and go to state 3
    CONSTANT    shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '~'         shift, and go to state 6
    '('         shift, and go to state 7

    stmts   go to state 8
    expr    go to state 9
    number  go to state 10
    ident   go to state 11


state 2

    0 $accept: lines $end .

    $default  accept


state 3

    2 lines: lines error . '\n'

    '\n'  shift, and go to state 12


state 4

   18 number: CONSTANT .

    $default  reduce using rule 18 (number)


state 5

   19 ident: IDENTIFIER .

    $default  reduce using rule 19 (ident)


state 6

   15 expr: '~' . expr

    CONSTANT    shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '~'         shift, and go to state 6
    '('         shift, and go to state 7

    expr    go to state 13
    number  go to state 10
    ident   go to state 14


state 7

   10 expr: '(' . expr ')'

    CONSTANT    shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '~'         shift, and go to state 6
    '('         shift, and go to state 7

    expr    go to state 15
    number  go to state 10
    ident   go to state 14


state 8

    1 lines: lines stmts . '\n'

    '\n'  shift, and go to state 16


state 9

    4 stmts: expr .
    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr

    '|'  shift, and go to state 17
    '^'  shift, and go to state 18
    '&'  shift, and go to state 19
    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24

    $default  reduce using rule 4 (stmts)


state 10

   16 expr: number .

    $default  reduce using rule 16 (expr)


state 11

    5 stmts: ident . '=' expr
   17 expr: ident .

    '='  shift, and go to state 25

    $default  reduce using rule 17 (expr)


state 12

    2 lines: lines error '\n' .

    $default  reduce using rule 2 (lines)


state 13

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   15     | '~' expr .

    $default  reduce using rule 15 (expr)


state 14

   17 expr: ident .

    $default  reduce using rule 17 (expr)


state 15

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   10     | '(' expr . ')'
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr

    '|'  shift, and go to state 17
    '^'  shift, and go to state 18
    '&'  shift, and go to state 19
    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24
    ')'  shift, and go to state 26


state 16

    1 lines: lines stmts '\n' .

    $default  reduce using rule 1 (lines)


state 17

   11 expr: expr '|' . expr

    CONSTANT    shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '~'         shift, and go to state 6
    '('         shift, and go to state 7

    expr    go to state 27
    number  go to state 10
    ident   go to state 14


state 18

   12 expr: expr '^' . expr

    CONSTANT    shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '~'         shift, and go to state 6
    '('         shift, and go to state 7

    expr    go to state 28
    number  go to state 10
    ident   go to state 14


state 19

   13 expr: expr '&' . expr

    CONSTANT    shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '~'         shift, and go to state 6
    '('         shift, and go to state 7

    expr    go to state 29
    number  go to state 10
    ident   go to state 14


state 20

    6 expr: expr '+' . expr

    CONSTANT    shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '~'         shift, and go to state 6
    '('         shift, and go to state 7

    expr    go to state 30
    number  go to state 10
    ident   go to state 14


state 21

    7 expr: expr '-' . expr

    CONSTANT    shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '~'         shift, and go to state 6
    '('         shift, and go to state 7

    expr    go to state 31
    number  go to state 10
    ident   go to state 14


state 22

    8 expr: expr '*' . expr

    CONSTANT    shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '~'         shift, and go to state 6
    '('         shift, and go to state 7

    expr    go to state 32
    number  go to state 10
    ident   go to state 14


state 23

    9 expr: expr '/' . expr

    CONSTANT    shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '~'         shift, and go to state 6
    '('         shift, and go to state 7

    expr    go to state 33
    number  go to state 10
    ident   go to state 14


state 24

   14 expr: expr '%' . expr

    CONSTANT    shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '~'         shift, and go to state 6
    '('         shift, and go to state 7

    expr    go to state 34
    number  go to state 10
    ident   go to state 14


state 25

    5 stmts: ident '=' . expr

    CONSTANT    shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    '~'         shift, and go to state 6
    '('         shift, and go to state 7

    expr    go to state 35
    number  go to state 10
    ident   go to state 14


state 26

   10 expr: '(' expr ')' .

    $default  reduce using rule 10 (expr)


state 27

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   11     | expr . '|' expr
   11     | expr '|' expr .
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr

    '^'  shift, and go to state 18
    '&'  shift, and go to state 19
    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24

    $default  reduce using rule 11 (expr)


state 28

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   12     | expr '^' expr .
   13     | expr . '&' expr
   14     | expr . '%' expr

    '&'  shift, and go to state 19
    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24

    $default  reduce using rule 12 (expr)


state 29

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   13     | expr '&' expr .
   14     | expr . '%' expr

    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24

    $default  reduce using rule 13 (expr)


state 30

    6 expr: expr . '+' expr
    6     | expr '+' expr .
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr

    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24

    $default  reduce using rule 6 (expr)


state 31

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    7     | expr '-' expr .
    8     | expr . '*' expr
    9     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr

    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24

    $default  reduce using rule 7 (expr)


state 32

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    8     | expr '*' expr .
    9     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr

    $default  reduce using rule 8 (expr)


state 33

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
    9     | expr '/' expr .
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr

    $default  reduce using rule 9 (expr)


state 34

    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   14     | expr '%' expr .

    $default  reduce using rule 14 (expr)


state 35

    5 stmts: ident '=' expr .
    6 expr: expr . '+' expr
    7     | expr . '-' expr
    8     | expr . '*' expr
    9     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr

    '|'  shift, and go to state 17
    '^'  shift, and go to state 18
    '&'  shift, and go to state 19
    '+'  shift, and go to state 20
    '-'  shift, and go to state 21
    '*'  shift, and go to state 22
    '/'  shift, and go to state 23
    '%'  shift, and go to state 24

    $default  reduce using rule 5 (stmts)
